--- a/eventListener2-2.html
+++ b/eventListener2-2.html
@@ -23,7 +23,7 @@
 	</div>
 	<script type="text/javascript">
 		var canvas = null, ctx = null, x = 0, y = 0;
-		var btn = 65, speed = 5, player = null, food = null;
+		var btn = 65, speed = 2, player = null, food = null;
 		var contador = 0, pausa = false, over = false, muros = new Array();
 
 		window.requestAnimationFrame = (function(){
@@ -57,12 +57,14 @@
 			}
 
 			if(pausa){
-				ctx.font = "18px Arial";
-				ctx.fillStyle = "red";
-				ctx.fillText("PAUSA", 210, 80);
-				ctx.font = "15px Arial";
-				ctx.fillStyle = "white";
-				ctx.fillText("Presiona P para continuar", 155, 105);
+				if(!over){
+					ctx.font = "18px Arial";
+					ctx.fillStyle = "red";
+					ctx.fillText("PAUSA", 210, 80);
+					ctx.font = "15px Arial";
+					ctx.fillStyle = "white";
+					ctx.fillText("Presiona P para continuar", 155, 105);
+				}
 			} 
 
 			if (over) {
@@ -167,10 +169,9 @@
 			}
 
 			this.intersects = function(rect){
-				if(this.x < rect.x + rect.w && this.x + this.w > rect.x && 
-					this.y < rect.y + rect.h && this.y + this.h > rect.y){
+				if(this.x+0.5 < rect.x + rect.w && this.x+0.5 + this.w+0.5 > rect.x && 
+					this.y+0.5 < rect.y + rect.h && this.y+0.5 + this.h+0.5 > rect.y){
 					return true;
-
 				}
 			}
 		}
