--- a/eventListener2-2.html
+++ b/eventListener2-2.html
@@ -23,7 +23,7 @@
 	</div>
 	<script type="text/javascript">
 		var canvas = null, ctx = null, x = 0, y = 0;
-		var btn = 65, speed = 2, player = null, food = null;
+		var btn = 65, speed = 1, player = null, food = null;
 		var contador = 0, pausa = false, over = false, muros = new Array();
 
 		window.requestAnimationFrame = (function(){
@@ -47,9 +47,8 @@
 			food.paint(ctx);
 
 			ctx.font = "15px Arial";
-			ctx.fillStyle = "red";
-			ctx.fillText("Marcador:", 380, 20);
-			ctx.fillText(contador, 420, 40);
+			ctx.fillStyle = "#D0D313";
+			ctx.fillText("Marcador:  " + contador, 380, 20);
 
 			ctx.fillStyle = "#B1B1B1";
 			for (var i = muros.length - 1; i >= 0; i--) {
@@ -122,10 +121,19 @@
 					}
 
 					if(player.intersects(food)){
-						food.x = random(canvas.width);
-						food.y = random(canvas.height);
 
-						contador++;
+							food.x = random(canvas.width+0.5);
+							food.y = random(canvas.height+0.5);
+
+							contador++;
+							speed += 0.2;
+
+						/*if (food.y == 50 || food.y == 170) {
+							if (food.x == 60 || food.x == 420) {
+								food.x = random(canvas.width+0.5);
+								food.y = random(canvas.height+0.5);
+							}
+						}*/
 					}
 
 					for (var i = muros.length - 1; i >= 0; i--) {
@@ -148,7 +156,7 @@
 			ctx = canvas.getContext('2d');
 
 			player = new Rectangle(0, 0, 10, 10);
-			food = new Rectangle(70, 50, 10, 10);
+			food = new Rectangle(90, 50, 10, 10);
 
 			muros.push(new Rectangle(60, 50, 10, 10));
 			muros.push(new Rectangle(420, 50, 10, 10));
@@ -176,8 +184,19 @@
 			}
 		}
 
+		/*
 		function random(m){
 			return Math.floor(Math.random()*m);
+		}
+		*/
+
+		function random(m){
+			var xd = Math.floor(Math.random()*m);
+
+
+			if (xd != 50 || xd != 60 || xd != 170 || xd != 420) {
+				return xd;
+			}
 		}
 		
 		window.addEventListener('load',init,false);
