--- a/eventListener2-2.html
+++ b/eventListener2-2.html
@@ -25,6 +25,7 @@
 		var canvas = null, ctx = null, x = 0, y = 0;
 		var btn = 65, speed = 1, player = null, food = null;
 		var contador = 0, pausa = false, over = false, muros = new Array();
+		var apple = new Image(), snake = new Image();
 
 		window.requestAnimationFrame = (function(){
 			return window.requestAnimationFrame || 
@@ -41,10 +42,12 @@
 			ctx.fillRect(0,0,canvas.width,canvas.height)
 
 			ctx.fillStyle = "#0f0";
-			player.paint(ctx);
+			//player.paint(ctx);
+			ctx.drawImage(snake, player.x, player.y);
 
 			ctx.fillStyle = "red";
-			food.paint(ctx);
+			//food.paint(ctx);
+			ctx.drawImage(apple, food.x, food.y);
 
 			ctx.font = "15px Arial";
 			ctx.fillStyle = "#D0D313";
@@ -53,6 +56,7 @@
 			ctx.fillStyle = "#B1B1B1";
 			for (var i = muros.length - 1; i >= 0; i--) {
 				muros[i].paint(ctx);
+
 			}
 
 			if(pausa){
@@ -139,6 +143,7 @@
 					for (var i = muros.length - 1; i >= 0; i--) {
 						if(muros[i].intersects(player)){
 							over = true;
+							setTimeout('reset()', 3000);
 						}
 					}
 				}
@@ -151,9 +156,26 @@
 			paint(ctx);
 		}
 
+		function reset(){
+			over = false;
+			btn = 65;
+			speed = 2;
+			contador = 0;
+
+			player.x = 0;
+			player.y = 0;
+
+			food.x = 90;
+			food.y = 50;
+
+		}
+
 		function init(){
 			canvas = document.getElementById('canvas');
 			ctx = canvas.getContext('2d');
+
+			snake.src ="images/snake.png";
+			apple.src ="images/apple.png";
 
 			player = new Rectangle(0, 0, 10, 10);
 			food = new Rectangle(90, 50, 10, 10);
