--- a/Examen_Laberinto.html
+++ b/Examen_Laberinto.html
@@ -18,7 +18,7 @@
 </head>
 <body>  
 	<div class='content otherClass' data-id='1'>
-		<canvas id="canvas" width="500" height="500" ></canvas>
+		<canvas id="canvas" width="600" height="800" ></canvas>
 	</div>
 	<script type="text/javascript">
 		var canvas = null, ctx = null, x = 0, y = 0;
@@ -41,11 +41,9 @@
 			ctx.fillRect(0,0,canvas.width,canvas.height)
 
 			ctx.fillStyle = "#0f0";
-			//player.paint(ctx);
 			ctx.drawImage(snake, player.x, player.y);
 
 			ctx.fillStyle = "red";
-			//food.paint(ctx);
 			ctx.drawImage(apple, food.x, food.y);
 
 			ctx.fillStyle = "#B1B1B1";
@@ -56,25 +54,25 @@
 
 			if(pausa){
 				if(!over){
-					ctx.font = "18px Arial";
+					ctx.font = "35px Arial black";
 					ctx.fillStyle = "red";
-					ctx.fillText("PAUSA", 210, 80);
-					ctx.font = "15px Arial";
+					ctx.fillText("PAUSA", 250, 330);
+					ctx.font = "30px Arial black";
 					ctx.fillStyle = "white";
-					ctx.fillText("Presiona P para continuar", 155, 105);
+					ctx.fillText("Presiona P para continuar", 100, 380);
 				}
 			} 
 
 			if (over) {
-				ctx.font = "20px Arial";
+				ctx.font = "35px Arial black";
 				ctx.fillStyle = "white";
-				ctx.fillText("GAME OVER", 180, 110);
+				ctx.fillText("GAME OVER", 200, 350);
 			}
 
 			if(winner){
-				ctx.font = "20px Arial";
+				ctx.font = "35px Arial black";
 				ctx.fillStyle = "white";
-				ctx.fillText("WINNER", 180, 110);
+				ctx.fillText("WINNER", 220, 350);
 			}
 		}
 
@@ -150,15 +148,15 @@
 		function reset(){
 			over = false;
 			winner = false;
-			
+
 			btn = 0;
 			speed = 1;
 
-			player.x = 470;
+			player.x = 570;
 			player.y = 5;
 
 			food.x = 20;
-			food.y = 485;
+			food.y = 785;
 
 		}
 
@@ -169,34 +167,174 @@
 			snake.src ="images/snake.png";
 			apple.src ="images/apple.png";
 
-			player = new Rectangle(470, 5, 10, 10);
-			food = new Rectangle(20, 485, 10, 10);
+			player = new Rectangle(570, 5, 10, 10);
+			food = new Rectangle(20, 785, 10, 10);
 
 			//contorno
-			muros.push(new Rectangle(0, 0, 460, 10));
-			muros.push(new Rectangle(490, 0, 10, 500));
-			muros.push(new Rectangle(0, 0, 10, 500));
-			muros.push(new Rectangle(40, 490, 460, 10));
+			muros.push(new Rectangle(0, 0, 560, 10));
+			muros.push(new Rectangle(590, 0, 10, 800));
+			muros.push(new Rectangle(0, 0, 10, 800));
+			muros.push(new Rectangle(40, 790, 560, 10));
 
 			//Camino ganador der
 			muros.push(new Rectangle(430, 40, 60, 10));
-			muros.push(new Rectangle(430, 40, 10, 60));
-			muros.push(new Rectangle(350, 100, 90, 10));
-			muros.push(new Rectangle(350, 100, 10, 40));
+			muros.push(new Rectangle(430, 40, 10, 40));
+			muros.push(new Rectangle(350, 80, 90, 10));
+			muros.push(new Rectangle(350, 80, 10, 60));
 			muros.push(new Rectangle(350, 100, 10, 40));
 			muros.push(new Rectangle(350, 140, 60, 10));
 			muros.push(new Rectangle(400, 140, 10, 40));
 			muros.push(new Rectangle(250, 180, 160, 10));
+			muros.push(new Rectangle(530, 40, 60, 10));
+			muros.push(new Rectangle(270, 220, 10, 90));
+			muros.push(new Rectangle(90, 310, 190, 10));
+			muros.push(new Rectangle(90, 310, 10, 40));
+			muros.push(new Rectangle(90, 350, 240, 10));
+			muros.push(new Rectangle(520, 330, 10, 40));
+			muros.push(new Rectangle(200, 430, 240, 10));
+			muros.push(new Rectangle(200, 430, 10, 50));
+			muros.push(new Rectangle(250, 470, 90, 10));
+			muros.push(new Rectangle(240, 440, 10, 40));
+			muros.push(new Rectangle(340, 470, 10, 50));
 
 			//Camino ganador izq
-			muros.push(new Rectangle(390, 0, 10, 60));
-			muros.push(new Rectangle(310, 60, 90, 10));
-			muros.push(new Rectangle(310, 70, 10, 80));
+			muros.push(new Rectangle(390, 0, 10, 40));
+			muros.push(new Rectangle(310, 40, 90, 10));
+			muros.push(new Rectangle(310, 50, 10, 100));
 			muros.push(new Rectangle(350, 100, 10, 40));
 			muros.push(new Rectangle(210, 140, 100, 10));
 			muros.push(new Rectangle(200, 140, 10, 50));
+			muros.push(new Rectangle(160, 220, 10, 50));
+			muros.push(new Rectangle(50, 390, 430, 10));
+			muros.push(new Rectangle(160, 390, 10, 90));
+			muros.push(new Rectangle(50, 510, 50, 10));
+			muros.push(new Rectangle(130, 510, 10, 50));
+			muros.push(new Rectangle(170, 510, 130, 10));
 
+			//Todo lo demás (se dividirá en izq-sup, der-sup, izq-inf, der-inf)
 
+			//izq-inf
+			muros.push(new Rectangle(120, 470, 40, 10));
+			muros.push(new Rectangle(120, 430, 10, 50));
+			muros.push(new Rectangle(0, 430, 50, 10));
+			muros.push(new Rectangle(90, 430, 40, 10));
+			muros.push(new Rectangle(0, 470, 80, 10));
+			muros.push(new Rectangle(40, 510, 10, 80));
+			muros.push(new Rectangle(0, 540, 40, 10));
+			muros.push(new Rectangle(290, 520, 10, 40));
+			muros.push(new Rectangle(260, 560, 40, 10));
+			muros.push(new Rectangle(250, 550, 10, 20));
+			muros.push(new Rectangle(170, 550, 80, 10));
+			muros.push(new Rectangle(90, 550, 40, 10));
+			muros.push(new Rectangle(90, 520, 10, 40));
+			muros.push(new Rectangle(40, 590, 60, 10));
+			muros.push(new Rectangle(140, 590, 60, 10));
+			muros.push(new Rectangle(200, 560, 10, 40));
+			muros.push(new Rectangle(200, 600, 60, 10));
+			muros.push(new Rectangle(300, 600, 40, 10));
+			muros.push(new Rectangle(260, 600, 10, 50));
+			muros.push(new Rectangle(260, 640, 40, 10));
+			muros.push(new Rectangle(300, 640, 10, 40));
+			muros.push(new Rectangle(760, 760, 10, 40));
+			muros.push(new Rectangle(0, 630, 170, 10));
+			muros.push(new Rectangle(200, 600, 10, 40));
+			muros.push(new Rectangle(200, 640, 30, 10));
+			muros.push(new Rectangle(40, 640, 10, 40));
+			muros.push(new Rectangle(40, 710, 10, 40));
+			muros.push(new Rectangle(40, 710, 10, 40));
+			muros.push(new Rectangle(40, 710, 40, 10));
+			muros.push(new Rectangle(120, 710, 10, 40));
+			muros.push(new Rectangle(80, 710, 10, 20));
+			muros.push(new Rectangle(40, 670, 90, 10));
+			muros.push(new Rectangle(200, 650, 10, 30));
+			muros.push(new Rectangle(170, 680, 90, 10));
+			muros.push(new Rectangle(160, 720, 190, 10));  
+			muros.push(new Rectangle(250, 720, 10, 40)); 
+			muros.push(new Rectangle(210, 755, 50, 10)); 
+			muros.push(new Rectangle(300, 755, 200, 10)); 
+			muros.push(new Rectangle(400, 755, 10, 40)); 
+			muros.push(new Rectangle(540, 755, 50, 10)); 
+			muros.push(new Rectangle(550, 710, 10, 45));
+			muros.push(new Rectangle(510, 670, 10, 50));
+			muros.push(new Rectangle(470, 720, 50, 10));
+			muros.push(new Rectangle(470, 670, 10, 50));
+			muros.push(new Rectangle(430, 670, 40, 10));
+			muros.push(new Rectangle(380, 720, 60, 10));
+			muros.push(new Rectangle(390, 700, 10, 20));
+			muros.push(new Rectangle(300, 680, 60, 10));
+			muros.push(new Rectangle(0, 750, 130, 10));
+			muros.push(new Rectangle(160, 730, 10, 60));
+
+			//der-inf
+			muros.push(new Rectangle(390, 470, 130, 10));
+			muros.push(new Rectangle(560, 470, 40, 10));
+			muros.push(new Rectangle(340, 400, 10, 40));
+			muros.push(new Rectangle(480, 430, 10, 40));
+			muros.push(new Rectangle(380, 470, 10, 40));
+			muros.push(new Rectangle(380, 510, 90, 10));
+			muros.push(new Rectangle(510, 510, 45, 10));
+			muros.push(new Rectangle(555, 450, 10, 70));
+			muros.push(new Rectangle(420, 510, 10, 40));
+			muros.push(new Rectangle(460, 550, 105, 10));
+			muros.push(new Rectangle(480, 550, 10, 40));
+			muros.push(new Rectangle(530, 590, 60, 10));
+			muros.push(new Rectangle(380, 590, 110, 10));
+			muros.push(new Rectangle(380, 550, 10, 40));
+			muros.push(new Rectangle(340, 550, 40, 10));
+			muros.push(new Rectangle(340, 550, 10, 90));
+			muros.push(new Rectangle(340, 630, 80, 10));
+			muros.push(new Rectangle(460, 630, 100, 10));
+			muros.push(new Rectangle(550, 630, 10, 40));
+			muros.push(new Rectangle(520, 670, 80, 10));
+			muros.push(new Rectangle(390, 630, 10, 40));
+			
+			//izq-sup
+			muros.push(new Rectangle(160, 180, 40, 10));
+			muros.push(new Rectangle(160, 100, 10, 90));
+			muros.push(new Rectangle(160, 100, 110, 10));
+			muros.push(new Rectangle(260, 40, 10, 60));
+			muros.push(new Rectangle(210, 40, 50, 10));
+			muros.push(new Rectangle(210, 40, 10, 30));
+			muros.push(new Rectangle(160, 40, 10, 60));
+			muros.push(new Rectangle(0, 40, 120, 10));
+			muros.push(new Rectangle(120, 40, 10, 60));
+			muros.push(new Rectangle(90, 100, 40, 10));
+			muros.push(new Rectangle(80, 80, 10, 30));
+			muros.push(new Rectangle(40, 80, 40, 10));
+			muros.push(new Rectangle(40, 80, 10, 60));
+			muros.push(new Rectangle(40, 140, 90, 10));
+			muros.push(new Rectangle(0, 180, 130, 10));
+			muros.push(new Rectangle(100, 180, 10, 40));
+			muros.push(new Rectangle(40, 220, 190, 10));
+			muros.push(new Rectangle(280, 220, 30, 10));
+			muros.push(new Rectangle(40, 265, 190, 10));
+			muros.push(new Rectangle(0, 310, 50, 10));
+			muros.push(new Rectangle(45, 310, 10, 90));
+
+			//der-sup
+			muros.push(new Rectangle(400, 120, 10, 20));
+			muros.push(new Rectangle(440, 80, 100, 10));
+			muros.push(new Rectangle(450, 120, 140, 10));
+			muros.push(new Rectangle(450, 120, 10, 40));
+			muros.push(new Rectangle(450, 160, 100, 10));
+			muros.push(new Rectangle(450, 200, 140, 10));
+			muros.push(new Rectangle(300, 180, 10, 40));
+			muros.push(new Rectangle(450, 200, 10,40));
+			muros.push(new Rectangle(360, 230, 90, 10));
+			muros.push(new Rectangle(500, 240, 90, 10));
+			muros.push(new Rectangle(500, 240, 10, 40));
+			muros.push(new Rectangle(500, 280, 50, 10));
+			muros.push(new Rectangle(280, 270, 50, 10));
+			muros.push(new Rectangle(380, 280, 120, 10));
+			muros.push(new Rectangle(320, 320, 10, 30));
+			muros.push(new Rectangle(370, 280, 10, 80));
+			muros.push(new Rectangle(420, 330, 10, 30));
+			muros.push(new Rectangle(420, 330, 60, 10));
+			muros.push(new Rectangle(470, 330, 10, 60));
+			muros.push(new Rectangle(530, 330, 60, 10));
+			muros.push(new Rectangle(520, 370, 40, 10));
+			muros.push(new Rectangle(520, 410, 70, 10));
+			muros.push(new Rectangle(520, 410, 10, 20));
 
 			run();
 		} 
